Changes in simPop version 0.2.12
  * adding some utility functions for the sga-project that are not exported
  * improve simContinuous() in order to allow to specify the model that should be used for estimation.

Changes in simPop version 0.2.11
  * new methods samp, samp<-,pop,and pop<- to extract/modify variables in sample/population on a simPopObj
  * adjust manageSimPopObj() to use these methods

Changes in simPop version 0.2.10
  * improvements in simContinous(): new parameters 'byHousehold' and 'basicOnly'

Changes in simPop version 0.2.9
  * manageSynthPopObj to manageSimPopObj
  * bug in calibPop.cpp solved (segmentation fault)

Changes in simPop version 0.2.8
  * random numbers in C++ instead of using R

Changes in simPop version 0.2.6
  * fix clang-compiler warning

Changes in simPop version 0.2.5
  * multiple fixes and performance improvements

Changes in simPop version 0.2.4
  * feature: generate colored mosaic plots in spMosaic()
  * fix: missing argument and code-mismatch in simRelation()

Changes in simPop version 0.2.3
  * fix in simContinuous() reported by Oliver

Changes in simPop version 0.2.2
  * new parameter 'nr_cpus' for calibPop(), simCategorical(), simContinuous() and simRelation() manually defining how many cpus should be used
  * updated man-pages
  * new helper-function 'parallelParameters()' returing a list with parameters 'have_win', 'parallel' and 'nr_cores'
  * fixed a bug in simCategorical if only one additional variable is simulated

Changes in simPop version 0.2.1
  * fixed a bug in simContinuous (win only) reported by olivier.

Changes in simPop version 0.2.0
  * version drop for final delivery

Changes in simPop version 0.1.9
  * allow more userfriendly input for calibSample()
  * calibSample() can be applied to objects of class 'simPopObj'
  * updated example for ipu
  * whipple index (original and modified) included
  * sprague index included
  * simInitSpatial() to generate districts from a broader region